# FinancialAgent1337

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: finance.sqlite3
documents/: NL22INGB0669807419_01-01-2025_23-08-2025.csv  XLS250827222000.xls
src/finagent/: __init__.py  cli.py
src/finagent/agents/: orchestrator.py  spending_tools.py
src/finagent/config/: env.py  logging.py  tracing.py
src/finagent/db/: init_db.py  schema.sql
src/finagent/tools/: categorizer.py  csv_ingest.py  excel_ingest.py  normalization.py  pdf_ingest.py
